--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "moment": "^2.30.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-easy-crop": "^5.5.0",
     "react-helmet": "^6.1.0",
     "react-router-dom": "^7.6.3",
     "react-scripts": "5.0.1",
