--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 REACT_APP_MODE = 'development'
 REACT_APP_API_PRODUCTION = 'https://socio.kuyaay.com/api/v1'
-REACT_APP_API_DEVELOPMENT = 'http://localhost:4000/api/v1'
+REACT_APP_API_DEVELOPMENT = 'http://192.168.18.8:4000/api/v1'
